[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "0.9.4"
regex = "1.9.5"
semver = "1.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
topo_sort = "0.4.0"
topological-sort = "0.2.2"
